added Get Endpoint in AuthController + added  JWT validation in SecurityConfig to return the user authenticated data in response